<resources>
    <string name="app_name">Loan Assistant</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="login_as">Login as  </string>
    <string name="dashboard">Dashboard</string>
    <string name="add_record">New Loan Application</string>
    <string name="track_collector">Track</string>
    <string name="menu">MENU</string>
    <string name="action_settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="exit_app">Exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_login">\"Invalid login details!\"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="description">Toggle Password</string>
    <string name="exit_dialog">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="title_activity_admin_panel">AdminPanel</string>
    <string name="loan">Loan</string>
    <string name="assistant">Assistant</string>
    <string name="collector">Collector</string>
    <string name="details">Employee Details</string>
    <string name="add_collector">Add New Employee</string>
    <string name="customer">Customer</string>
    <string name="name">Name</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_phone">Enter Phone Number</string>
    <string name="aadhar">Aadhar Number</string>
    <string name="hint_aadhar">Enter Aadhar Number</string>
    <string name="add">ADD</string>
    <string name="phone">Phone</string>
    <string name="cust_details">Customer Details</string>
    <string name="amount">Amount</string>
    <string name="hint_amount">Enter Loan Amount</string>
    <string name="hint_rate">Interest Rate (%)</string>
    <string name="time">Time</string>
    <string name="collector_details">Employee Details</string>
    <string name="mobile">Mobile</string>
    <string name="hint_password">Enter Password</string>
    <string name="notifications">Notifications</string>
    <string name="next">Next</string>
    <string name="new_employee">Add New Employee</string>
    <string name="address">Address</string>
    <string name="hint_address">Enter Address</string>
    <string name="upload_dp">Upload Profile Picture</string>
    <string name="new_employee2">Other Details</string>
    <string name="back">BACK</string>
    <string name="img_preview">Image Preview</string>
    <string name="admin_success">Admin successful</string>
    <string name="collector_success">Collector successful</string>
    <string name="hint_duration">Time Duration</string>
    <string name="hint_installment">Enter Loan Installments</string>
    <string name="profile">Profile</string>
    <string name="change_pwd">Change Password</string>

    <!--Tracker text-->
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">niteshlekhi@gmail.com</string>
    <string name="firebase_password" translatable="false">qwerty</string>
    <string name="title_activity_transport">Map</string>
    <string name="review">Review</string>
    <string name="customer_details">User Details</string>
    <string name="pending">Pending Payments</string>
    <string name="initial_date">Initial Date</string>
    <string name="due_date">Due Date: </string>
    <string name="rate">Interest rate: </string>
    <string name="installments">Installments: </string>
    <string name="done">Done</string>
    <string name="appoint">Appoint</string>
    <string name="Rs">\u20B9</string>

    <!-- String Placeholders -->
    <string name="style_name">Name: %s</string>
    <string name="style_address">Address: %s</string>
    <string name="style_phone">Phone: %s</string>
    <string name="style_email">Email: %s</string>
    <string name="style_aadhar">Aadhar: %s</string>
    <string name="style_amount">Amount: \u20B9 %s</string>
    <string name="style_interest">Interest: %s</string>
    <string name="style_rate">Rate: %s %%</string>
    <string name="style_time">Time: %d mo</string>
    <string name="style_init_date">Loan Date: %s</string>
    <string name="style_due_date">Due Date: %s</string>\
    <string name="style_installments">Installments: %s</string>
    <string name="select_employee">---Select Employee Name---</string>
    <string name="total_entries">Total entries:  </string>
    <string name="no_network">No Internet connection found!!</string>
    <string name="retry">Retry</string>
    <string name="appointed">Appointed Payment Collections</string>
    <string name="location">Locate User</string>
    <string name="pmt_mode">Select Payment Mode</string>
    <string name="detailss">Details</string>
    <string name="pay">Pay Amount</string>
    <string name="finish">Finish</string>
    <string name="title_activity_maps">Map</string>
    <string name="delete">Delete</string>
    <string name="delete_item">Delete Item?</string>
    <string name="paid_amt">Enter Amount to be paid</string>
    <string name="count">Count</string>
</resources>
