<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_10_dp"
    android:layout_marginLeft="@dimen/margin_5_dp"
    android:layout_marginRight="@dimen/margin_5_dp"
    android:layout_marginTop="@dimen/margin_10_dp"
    android:background="@drawable/bg_edittext"
    android:orientation="vertical"
    android:padding="@dimen/margin_5_dp">

    <TextView
        android:id="@+id/lstPendingPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5_dp"
        android:gravity="center"
        android:text="@string/phone"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lstAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5_dp"
        android:gravity="center"
        android:text="@string/amount"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lstInitialDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5_dp"
        android:gravity="center"
        android:text="@string/initial_date"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold"

        android:visibility="visible" />

    <TextView
        android:id="@+id/lstDueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5_dp"
        android:gravity="center"
        android:text="@string/due_date"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_5_dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/lstInterest"
            android:layout_width="@dimen/margin_0_dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_5_dp"
            android:layout_weight="0.6"
            android:gravity="start"
            android:text="@string/rate"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_18_sp"
            android:textStyle="bold"
            android:visibility="visible" />

        <TextView
            android:id="@+id/lstTime"
            android:layout_width="@dimen/margin_0_dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_5_dp"
            android:layout_weight="0.4"
            android:gravity="start"
            android:text="@string/time"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_18_sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </LinearLayout>

    <TextView
        android:id="@+id/lstInstallments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5_dp"
        android:gravity="center"
        android:padding="@dimen/margin_5_dp"
        android:text="@string/installments"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_18_sp"
        android:textStyle="bold"
        android:visibility="visible" />

</LinearLayout>