<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_20_dp"
    android:background="@android:color/white"
    android:gravity="center"
    tools:context=".fragments.AddCollector2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15_dp"
        android:background="@drawable/custom_list"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_20_dp"
            android:layout_marginTop="@dimen/margin_20_dp"
            android:gravity="center"
            android:text="@string/new_employee2"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="@dimen/text_20_sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10_dp"
            android:background="@drawable/bg_edittext">

            <EditText
                android:id="@+id/ctrAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_5_dp"
                android:drawableLeft="@drawable/ic_address"
                android:drawablePadding="@dimen/margin_15_dp"
                android:drawableStart="@drawable/ic_address"
                android:hint="@string/hint_address"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20_dp"
            android:background="@drawable/custom_list"
            android:text="@string/upload_dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_20_sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ctrDp"
            android:layout_width="@dimen/margin_100_dp"
            android:layout_height="@dimen/margin_80_dp"
            android:layout_margin="@dimen/margin_20_dp"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/phone"
            android:gravity="center"
            android:padding="10dp"
            android:src="@drawable/ic_camera" />

        <ImageView
            android:id="@+id/ctrDpPreview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="@dimen/margin_20_dp"
            android:contentDescription="@string/img_preview"
            android:gravity="center"
            android:padding="10dp" />

        <!--Others-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrevPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_20_dp"
                android:layout_marginTop="@dimen/margin_20_dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="@dimen/margin_15_dp"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_20_sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAddCollector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_20_dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:padding="@dimen/margin_15_dp"
                android:text="@string/add"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_20_sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>